fix(study): SJIP-797 align statistic

--- a/packages/ui/src/components/StatisticIcon/index.module.scss
+++ b/packages/ui/src/components/StatisticIcon/index.module.scss
@@ -3,7 +3,6 @@
 .statisticWrapper {
     display: flex;
     align-items: center;
-    justify-content: center;;
     gap: 16px;
 
     .stats {
